@@ -1,3 +1,8 @@
+2005-08-08  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/opt.c (opt_default, _find_path) : Initialize path_progname
+	  for both pdsh and pdcp.
+
 2005-08-06  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/main.c : Change seteuid() to plain setuid() which is
